--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,10 @@ body {
   background-image: url('./assets/images/tom-kulczycki-N2fRlew1J6U-unsplash.jpg');
   background-repeat: no-repeat, repeat;
   background-size: cover;
-  background-color: darkslategray;
+  background-color: rgb(73, 0, 73);
+}
+
+.main-img {
+  height: 15rem;
+  border-radius: 50%;
 }
