--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -43,22 +44,85 @@ h6 {
   overflow-wrap: break-word;
 }
 
+:root {
+  --bg-wht: rgba(255, 255, 255, 0.15);
+  --bg-blk1: rgba(0, 0, 0, 0.8);
+  --bg-blk2: rgba(0, 0, 0, 0.6);
+}
+
+@font-face {
+  font-family: EduVICWANTBeginner;
+  src: url('./assets/fonts/EduVICWANTBeginner-Regular.ttf');
+}
+
+@font-face {
+  font-family: GreyQo-Regular;
+  src: url('./assets/fonts/GreyQo-Regular.ttf');
+}
+
 * {
+  font-family: EduVICWANTBeginner, Arial, Helvetica, sans-serif;
   color: white;
 }
 
 body {
-  background-image: url('./assets/images/tom-kulczycki-N2fRlew1J6U-unsplash.jpg');
+  background-image: url('./assets/images/edited-tom-kulczycki-N2fRlew1J6U-unsplash.jpg');
   background-repeat: no-repeat, repeat;
   background-size: cover;
   background-color: rgb(73, 0, 73);
 }
 
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--bg-blk1);
+}
+
+header > p {
+  font-family: GreyQo-Regular, Arial, Helvetica, sans-serif;
+  font-size: 5rem;
+  /* font-weight: bold; */
+}
+
+header > nav {
+  display: flex;
+  gap: 1rem;
+  padding-bottom: 1rem;
+}
+
 button {
-  color: black;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  transition: 400ms;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  transform: translateY(-0.35rem);
+}
+
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+  width: 50vw;
+  margin: auto;
+  margin-top: 2rem;
+  padding: 2rem;
+  background-color: var(--bg-blk2);
+  font-size: 1.3rem;
+}
+
+#content > :first-child {
+  font-weight: bold;
 }
 
 .main-img {
-  height: 15rem;
+  height: 20rem;
   border-radius: 50%;
+  border: 5px solid rgb(84, 0, 84);
 }
