--- a/src/styles.css
+++ b/src/styles.css
@@ -104,7 +104,7 @@ button:hover {
   transform: translateY(-0.35rem);
 }
 
-#content {
+.home {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -117,11 +117,11 @@ button:hover {
   font-size: 1.3rem;
 }
 
-#content > :first-child {
+.home > :first-child {
   font-weight: bold;
 }
 
-.main-img {
+.home > .main-img {
   height: 20rem;
   border-radius: 50%;
   border: 5px solid rgb(84, 0, 84);
