--- a/src/styles.css
+++ b/src/styles.css
@@ -67,10 +67,11 @@ h6 {
 }
 
 body {
-  background-image: url('./assets/images/bnw-tom-kulczycki-N2fRlew1J6U-unsplash.jpg');
-  background-repeat: no-repeat, repeat;
+  background-color: rgb(46, 0, 46);
+  background: no-repeat center
+    url('./assets/images/bnw-tom-kulczycki-N2fRlew1J6U-unsplash.jpg');
+  background-attachment: fixed;
   background-size: cover;
-  background-color: rgb(73, 0, 73);
 }
 
 header {
